gccida/c1/expand_nl_handler_label
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_nl_handler_label/src/stmt.c:4002:36: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v2); 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_nl_handler_label/src/obj/stmt.o] Error 1
